<resources>
    <string name="app_name">NPUT1</string>
    <string name="title_activity_maps">Map</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid coordinates used</string>
    <string name="no_address_found">No address found</string>
    <string name="title_maps">Maps</string>
    <string name="title_home">Home</string>
    <string name="title_day">Day</string>
    <string name="title_week">Week</string>
    <string name="title_allTime">All Time</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_total">All time</string>
    <string name="click_for_location">Click for Location</string>
    <string name="permission_rationale">Please grant location permission to start the service</string>
    <string name="permission_denied_explanation">You have not granted location permission. So the service cannot be started.</string>
    <string name="settings">settings</string>
    <string name="title_alert_no_intenet">No internet</string>
    <string name="msg_alert_no_internet">Please make sure that you have active internet connection.</string>
    <string name="no_google_playservice_available">No Google Playservice found. Please install it.</string>
    <string name="msg_location_service_not_started">Location Tracking Not Started</string>
    <string name="msg_location_service_started">Location Tracking Started</string>
    <string name="btn_label_refresh">Refresh</string>
    <string name="title_tracker">Track Me</string>
    
    
    <string name="table_layout_4_open">Open</string>
    <string name="table_layout_4_open_shortcut">Ctrl-O</string>
    <string name="table_layout_4_save">Save As</string>
    <string name="table_layout_4_save_shortcut">Ctrl-Shift-S</string>
    
    
</resources>
