<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/table_layout_4_open" />

        <TextView
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/table_layout_4_open_shortcut" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/table_layout_4_save" />

        <TextView
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/table_layout_4_save_shortcut" />
    </TableRow>
</TableLayout>