<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".TrackerActivity">


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="0dp">

        <TableRow>

            <TextView
                android:id="@+id/msgView1"
                android:padding="3dip"
                android:text="@string/table_layout_4_open" />

            <TextView
                android:id="@+id/msgView2"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/msgView3"
                android:padding="3dip"
                android:text="@string/table_layout_4_save" />

            <TextView
                android:id="@+id/msgView4"
                android:layout_height="match_parent"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>

<TextView
    android:id="@+id/msgView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:textColor="#000"
    android:text="@string/msg_location_service_not_started"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
